<!-- Este es el diseño de la actividad RegisterActivity -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_en_peluqueria_lucia"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNombreR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPasswordR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            app:endIconMode="password_toggle"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_contrasena"
            app:endIconMode="password_toggle"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword2R"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldTelefonoR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTelefonoR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerGeneroR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:entries="@array/generos"/>

        <Button
            android:id="@+id/buttonRegisterR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            style="@style/CustomButtonStyle"/>

    </LinearLayout>
</ScrollView>
