<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Agregar el logo de la aplicación -->
            <ImageView
                android:id="@+id/imageViewAppIcon"
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:src="@drawable/icon_login"
                android:scaleType="fitXY"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageViewAppIcon"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="50dp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmailL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textInputLayoutEmail"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:hint="@string/contrasena"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPasswordL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textInputLayoutPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/olvidaste_contrasena"
                android:textColor="@color/lavender"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonLoginL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewForgotPassword"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="50dp"
                android:text="@string/login" />

            <ImageButton
                android:id="@+id/buttonLoginGoogleL"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/buttonLoginL"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/google_border"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/google" />

            <Button
                android:id="@+id/buttonRegisterL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonLoginGoogleL"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/registrarse" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
