<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultarActivityAdmin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

        <!-- Texto indicando que se pueden anular las citas -->
        <TextView
            android:id="@+id/textViewNoCitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tiene_citas_disponibles"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            style="@style/CustomTextViewStyle"/>

        <!-- Texto indicando que se pueden anular las citas -->
        <TextView
            android:id="@+id/textViewAnularCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pulse_anular_cita"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            style="@style/CustomTextViewStyle"/>

        <!-- TextView para indicar "Elige usuario" -->
        <TextView
            android:id="@+id/textViewEligeUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elija_usuario"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="?android:attr/textColorPrimary"/>

        <!-- Spinner para seleccionar el usuario -->
        <Spinner
            android:id="@+id/spinnerUsuarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:id="@+id/layoutBotones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- Botón de búsqueda -->
            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buscar"
                android:drawableEnd="@drawable/ic_search"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/CustomButtonStyle"/>

            <!-- Botón para ver todas las citas -->
            <Button
                android:id="@+id/btnVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volver"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:visibility="gone"
                style="@style/CustomButtonStyle"/>
        </LinearLayout>


        <!-- SwipeRefreshLayout para permitir la actualización -->
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- ListView para mostrar las citas -->
            <ListView
                android:id="@+id/lvCitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start">

        <include layout="@layout/nav_drawer_admin"/>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
